--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "stylelint-config-standard": "^19.0.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "axios": "^0.19.0",
     "json": "^9.0.6",
     "react": "^16.12.0",
